--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -15223,7 +15223,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     height: 100%;
     width: 100%;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     font-size: 1.125rem;
     color: #fff;
